Polised bootstrap version and tried to update code so the operation keys will return a result if they are pressed a second time

--- a/calculator.html
+++ b/calculator.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <title>JavaScript Calculator</title>
 </head>
 <body>
-    <div><h2>Calculator</h2></div>
+    <div><h1>JAVASCRIPT CALCULATOR</h1></div>
     <div id='calc-container'>
         <div id='display-container'>
             <input type="text" id='calc-display' class='display' placeholder="0">
         </div>
-        <button id='add' class='operation'>+</button>
-        <button id='subtract' class='operation'>-</button>
-        <button id='multiply' class='operation'>x</button>
-        <button id='divide' class='operation'>/</button>
-        <button id='period' class='numpad'>.</button>
-        <button id='equals'>=</button>
-        <button id='seven' class='numpad'>7</button>
-        <button id='eight' class='numpad'>8</button>
-        <button id='nine' class='numpad'>9</button>
-        <button id='four' class='numpad'>4</button>
-        <button id='five' class='numpad'>5</button>
-        <button id='six' class='numpad'>6</button>
-        <button id='one' class='numpad'>1</button>
-        <button id='two' class='numpad'>2</button>
-        <button id='three' class='numpad'>3</button>
-        <button id='zero' class='numpad'>0</button>
+        <button id='add' class='operation' value="+" onclick='oper("addition")'>+</button>
+        <button id='subtract' class='operation' value='-' onclick='oper("subtraction")'>-</button>
+        <button id='multiply' class='operation' value='*' onclick='oper("multiplication")'>x</button>
+        <button id='divide' class='operation' value='/' onclick='oper("division")'>/</button>
+        <button id='period' class='numpad' value='.' onclick='num(".")'>.</button>
+        <button id='all-clear' class='clear' onclick='clearAll()'>AC</button>
+        <button id='equals' value='=' onclick='solve(true)'>=</button>
+        <button id='seven' class='numpad' value='7' onclick='num("7")'>7</button>
+        <button id='eight' class='numpad' value='8' onclick='num("8")'>8</button>
+        <button id='nine' class='numpad' value='9' onclick='num("9")'>9</button>
+        <button id='four' class='numpad' value='4' onclick='num("4")'>4</button>
+        <button id='five' class='numpad' value='5' onclick='num("5")'>5</button>
+        <button id='six' class='numpad' value='6' onclick='num("6")'>6</button>
+        <button id='one' class='numpad' value='1' onclick='num("1")'>1</button>
+        <button id='two' class='numpad' value='2' onclick='num("2")'>2</button>
+        <button id='three' class='numpad' value='3' onclick='num("3")'>3</button>
+        <button id='zero' class='numpad' value='0' onclick='num("0")'>0</button>
     </div>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
